[package]
name = "discord-help-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.10" }